Transfer code from "cool" to "cooljure"

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
+*.swp
+.*.swp
+.lein-repl-history
+/target
+/classes
+/checkouts
 pom.xml
 pom.xml.asc
-*jar
-/lib/
-/classes/
-/target/
-/checkouts/
-.lein-deps-sum
-.lein-repl-history
-.lein-plugins/
-.lein-failures
+*.jar
+*.class
+/.lein-*
+/.nrepl-port
