20181101-2149 first integration of tupelo into cljs-template. tests passing

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,27 @@
 *.class
-*.iml
+*.iml 
 *.jar
 *.swp
 .*.swp
 .idea
+.lein-deps-sum
+.lein-plugins
 .lein-repl-history
+.nrepl-port
+.repl
 /.lein-*
 /.nrepl-port
 /checkouts
 /classes
+/lib
+/node_modules
+/out
+/resources/public/js/compiled/**
 /target
+/test-results
+TESTS-Chrome*.xml
+classes
+figwheel_server.log
+package-lock.json
 pom.xml
 pom.xml.asc
